Fix header spacing

--- a/app/components/header/Header.module.scss
+++ b/app/components/header/Header.module.scss
@@ -3,4 +3,5 @@
 .headerContainer {
     display: flex;
     justify-content: center;
+    padding-top: 4rem;
 }
